# chachi-shell

./: .gitignore  .gitmodules  .liferay-eslintrc  AGENTS.md  COLOR_SCHEME.md  README.md  infra.yml  install-apt.sh  install.sh  liferay.yml  playbook.yml  test.sh  update_dotfiles.sh
agents/: README.md
applications/: calendar.desktop  jetbrains-idea.desktop  jetbrains-toolbox.desktop  liferay-calendar.desktop  liferay-daily.desktop  liferay-demo.desktop  liferay-frontmovil.desktop  liferay-gmail.desktop  liferay-kickoff.desktop  liferay-lightning-talks.desktop  liferay-lo-de-fron.desktop  liferay-wiki.desktop  liferay-woffu.desktop  mimeinfo.cache  notion.desktop  telegram-desktop.desktop  tweetdeck.desktop  youtube-music.desktop
awesome/: README.md
bash/: aliases.sh  install.sh  liferay.sh  main.sh  pending.sh  prompt.sh
config/: alacritty.yml  gitconfig  gitignore-global  i3.config  pkglist.txt  sway.config  sway.keybindings.txt  tmux.conf  xfce4panel.tar.bz2  xresources  (+1 more)
seniore/: .editorconfig  .prettierrc  Cargo.toml  README.md  dev.sh  install.sh
seniore/docs/: help.txt
seniore/src/: main.rs
seniore/src/commands/: liferay.rs  linux.rs  mod.rs  testing.rs  woffu.rs
seniore/src/commands/liferay/: build_lang.rs  format_modules.rs  get_updated_modules.rs  update_modules_cache.rs
seniore/src/commands/linux/: get_brightness.rs  get_date.rs  get_volume.rs  mod.rs  screen_layout.rs
seniore/src/commands/testing/: echo.rs
seniore/src/commands/woffu/: get_status.rs  mod.rs  toggle.rs
seniore/src/util/: command.rs  mod.rs  notify.rs  runnable.rs  tmp.rs
(+877 files in other folders)
