[package]
name = "seniore"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.59"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
notify-rust = "4"
ansi-escapes = "0.1.1"
regex = "1"
clap = { version = "4.4.18", features = ["derive"] }
